# order-service

./: .env.example  .gitignore  README.md  docker-compose.override.yml.example  docker-compose.yml  pyproject.toml
frontend/: customers.html  index.html  orders.html  products.html
frontend/public/: index.html
frontend/src/: cart.ts  config.ts  customers.ts  orders.ts  products.ts  types.ts
frontend/src/api/: apiClient.ts  customerApi.ts  orderApi.ts  productApi.ts
frontend/src/components/: Header.ts
frontend/src/managers/: cart.ts
frontend/src/pages/: customers.ts  dashboard.ts  orders.ts  products.ts
frontend/src/renderers/: cartItemRenderer.ts  customerRenderer.ts  orderRenderer.ts  productRenderer.ts
frontend/src/utils/: dom.ts  sort.ts
frontend/static/css/: style.css
frontend/static/js/: app.js
src/: Dockerfile  config.py  main.py
src/alembic/: env.py
src/alembic/versions/: 12a23d7242e3_add_products.py  37370bf74d30_add_orders.py  c8d3c1b6a860_add_customers.py
src/app/: dependencies.py
src/app/db/: manager.py  session.py  unit_of_work.py
src/app/db/models/: __init__.py  customer.py  (+3 more)
src/app/exceptions/: base.py  domain.py  handlers.py
src/app/repositories/: __init__.py  customer_repository.py  order_repository.py  product_repository.py
src/app/routes/: customer_routes.py  order_routes.py  product_routes.py
src/app/schemas/: __init__.py  customer.py  order.py  product.py
src/app/services/: customer_service.py  order_service.py  product_service.py
src/app/utils/: logging.py
tests/: conftest.py
tests/unit/: conftest.py
(+8 files in other folders)
